# robotics-transformer-1

./: .gitignore  README.md  main.py  pyproject.toml
modules/: FiLM.py  README.md  actionHead.py  efficientNetFiLM.py  multiHeadAttention.py  positionalEncoding.py  rt.py  sentenceEncoder.py  tokenLearner.py  transformerDecoder.py
tests/: test_integration.py
